# 3DScanMotionCap

./: CMakeLists.txt  README.md  main.cpp  rgb4_keypoints.json
Version1.0/DatasetToImages&Keypoints/datas/keypoints/: rgb10_keypoints.json  rgb11_keypoints.json  rgb12_keypoints.json  rgb14_keypoints.json  rgb15_keypoints.json  rgb16_keypoints.json  rgb17_keypoints.json  rgb18_keypoints.json  rgb19_keypoints.json  rgb1_keypoints.json  rgb20_keypoints.json  rgb21_keypoints.json  rgb22_keypoints.json  rgb23_keypoints.json  rgb25_keypoints.json  rgb26_keypoints.json  rgb27_keypoints.json  rgb28_keypoints.json  rgb29_keypoints.json  rgb2_keypoints.json  rgb30_keypoints.json  rgb31_keypoints.json  rgb32_keypoints.json  rgb33_keypoints.json  rgb34_keypoints.json  rgb35_keypoints.json  rgb36_keypoints.json  rgb37_keypoints.json  rgb38_keypoints.json  rgb39_keypoints.json  rgb40_keypoints.json  rgb41_keypoints.json  rgb42_keypoints.json  rgb43_keypoints.json  rgb44_keypoints.json  rgb45_keypoints.json  rgb46_keypoints.json  rgb47_keypoints.json  rgb48_keypoints.json  rgb49_keypoints.json  (+52 more)
